tests/ui/pipeline_builder_root_not_public_dsl.rs
use viprs::PipelineBuilder;

fn main() {
    let _ = std::any::TypeId::of::<PipelineBuilder>();
}
